--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,11 +1,11 @@
 <ion-modal-view>
   <ion-header-bar>
-    <h1 class="title">Login</h1>
+    <h1 class="title">EasyNote</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
     </div>
   </ion-header-bar>
-  <ion-content>
+  <ion-content class="bg">
     <form ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
