--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,36 +1,74 @@
-<ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+<ion-side-menus enable-menu-with-back-views="false" >
+  <ion-side-menu-content class="">
+    <ion-nav-bar class="bar-assertive ion-button-">
+    <button class="button button-clear icon ion-gear-a button-positive">
+  
+</button>
+
       <ion-nav-back-button>
+
       </ion-nav-back-button>
 
-      <ion-nav-buttons side="left">
+      <ion-nav-buttons class="button ion-button-right" side="Menu">
+        
+
+
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
+        <button class="button button-icon button-clear ion-clipboard " style="margin-left:258%">  
+        </button>
+        <button class="button button-icon button-clear ion-edit" style="margin-left:7%">  
+        </button>
+        
+      
 
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      </ion-nav-buttons>
+
+    </ion-nav-bar>
+    <ion-nav-view  name="menuContent"></ion-nav-view>
+  </ion-side-menu-content>
+   
+  <ion-side-menu side="left" style="background-color:#ffe680">
+    <ion-header-bar class="bar-assertive">
+      <h1 class="title"></h1>
     </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+
+
+
+
+    <ion-content class="list" style="background-color:#ffe680">
+    
+    
+     <ion-list class="" style="background-color:black">
+        
+       
+          <ion-item menu-close ng-click="login()" class="item item-balanced "  href="#" >
+          <i class="icon ion-compose"></i>
+          EasyNote
+          <span class="badge badge-stable">0</span>
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item menu-close class="item item-calm" href="#/app/search">
+          <i class="icon ion-star"></i>
+          Starred
+          <span class="badge badge-stable">0</span>
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item menu-close class="item item-royal " href="#/app/browse">
+          <i class="icon ion-calendar"></i>
+          Calendar
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close class="item item-energized " href="#/app/playlists">
+          <i class="icon ion-ios-albums"></i>
+          Archive
+        </ion-item>
+        <ion-item menu-close class="item item-assertive " href="#/app/playlists">
+          <i class="icon ion-ios-trash"></i>
+          TrashCan
         </ion-item>
       </ion-list>
+    
     </ion-content>
+
+
+
   </ion-side-menu>
 </ion-side-menus>
