Signed-off-by: shah009 <alishah.09@outlook.com>

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -42,7 +42,7 @@
      <ion-list class="" style="background-color:black">
         
        
-          <ion-item menu-close ng-click="login()" class="item item-balanced "  href="#" >
+        <ion-item menu-close ng-click="login()" class="item item-balanced "  href="#/app/login" >
           <i class="icon ion-compose"></i>
           EasyNote
           <span class="badge badge-stable">0</span>
