--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -8,20 +8,33 @@
 <ion-list style="margin-left:20%">
 	
 
-  <button class="button button-full " >
+<!--   <button class="button button-balanced " style=" margin-left:3%; width:94%; ">
   Note 1
   </button>
 
-  <button class="button button-full button-balanced" >
+  <button class="button button-calm  " style=" margin-left:3%; width:94%; ">
   Note 2
   </button>
 
-  <button class="button button-full button-positive" >
+  <button class="button button-positive " style=" margin-left:3%; width:94%; ">
   Note 3
   </button>
-  <button class="button button-full button-assertive" >
+
+  <button class="button button-assertive"  style=" margin-left:3%; width:94%; " >
   Note 4
-  </button>
+  </button> -->
+
+  <div class="list" style=" margin-left:3%; width:94%;">
+
+  <div class="item item-royal item-divider">
+    Candy Bars
+  </div>
+
+  <a class="item item-energized " href="#">
+    Butterfinger
+  </a>
+
+</div>
 
 
 </ion-list>
