--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,5 +1,17 @@
 <ion-view view-title="Search">
-  <ion-content>
-    <h1>Search</h1>
+  <ion-content class="bg">
+  <footer>  
+ <div class="tabs tabs-assertive tabs-icon-only">
+  <a class="tab-item">
+    <i class="icon ion-home"></i>
+  </a>
+  <a class="tab-item">
+    <i class="icon ion-star"></i>
+  </a>
+  <a class="tab-item">
+    <i class="icon ion-gear-a"></i>
+  </a>
+</div>
+<footer>
   </ion-content>
 </ion-view>
