--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,30 +1,12 @@
-<ion-view view-title="Easy Note">
-<ion-header-bar>
-
-</ion-header-bar>
-   
-    <!-- <div class="buttons">
+<ion-modal-view>
+  <ion-header-bar>
+    <h1 class="title">Login</h1>
+    <div class="buttons">
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div> -->
-  
-<ion-content class="bg">
-
-  
-
- <div class="tabs tabs-assertive tabs-icon-only">
-  <a class="tab-item">
-    <i class="icon ion-home"></i>
-  </a>
-  <a class="tab-item">
-    <i class="icon ion-star"></i>
-  </a>
-  <a class="tab-item">
-    <i class="icon ion-gear-a"></i>
-  </a>
-</div>
-
-
-    <!-- <form ng-submit="doLogin()">
+    </div>
+  </ion-header-bar>
+  <ion-content>
+    <form ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Username</span>
@@ -38,6 +20,6 @@
           <button class="button button-block button-positive" type="submit">Log in</button>
         </label>
       </div>
-    </form> -->
- </ion-content>
-</ion-view>
+    </form>
+  </ion-content>
+</ion-modal-view>
