--- a/www/templates/calender.html
+++ b/www/templates/calender.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar>
+  <ion-header-bar class="bg">
     <!-- <h1 class="title">Login</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
@@ -7,7 +7,7 @@
   </ion-header-bar>
   <ion-content>
 
- <button class="button" ng-click="createEvent()">Create Event</button>
+ 
 
   </ion-content>
 </ion-modal-view>
