--- a/www/templates/notes.html
+++ b/www/templates/notes.html
@@ -5,9 +5,8 @@
  <button class="button icon-left ion-paintbucket" style="margin-top:20%; margin-left:20%;">
 </button>
 </div> -->
-<div ng-model="colorValueTinyTrigger" style="margin-top:20%">
-<input color-picker tiny-trigger="true">
-</div>
+   
+   <div color-picker ng-model="colorValueInline" style="margin-top:30%"></div>
 <!-- <input color-picker tiny-trigger="true" ng-model="colorValueTinyTrigger">
  --><!-- <div class="sample-container">
 				<p class="desc_p">Replacing any HTML element with a cool tiny trigger (click on the little colored square)</p>
@@ -20,7 +19,7 @@
 				</pre>
 			</div> -->
 
-</div>
+<!-- </div> -->
   </ion-content>
 </ion-view>
 
