--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Favourite">
-  <ion-content>
+  <ion-content class="bg">
     <h1>Favourite</h1>
   </ion-content>
 </ion-view>
